<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.mobicents.tools</groupId>
		<artifactId>sip-balancer</artifactId>
		<version>7.0.0-TelScale-SNAPSHOT</version>
	</parent>

	<artifactId>sip-balancer-jar</artifactId>

	<name>Mobicents Converged Load Balancer Jar</name>
	<description>Mobicents Converged Load Balancer Jar</description>
	<url>http://code.google.com/p/commscale.load-balancer</url>

	<properties>
		<manifest.url>http://code.google.com/p/commscale.load-balancer
		</manifest.url>
		<manifest.implementation.title>${project.groupId}:${project.artifactId}
		</manifest.implementation.title>
		<manifest.implementation.version>${project.version}
		</manifest.implementation.version>
		<manifest.implementation.vendor>TeleStax, Inc.
		</manifest.implementation.vendor>
		<telscale.license.version>1.0.4-SNAPSHOT</telscale.license.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty</artifactId>
			<version>3.6.6.Final</version>
			<!--scope>provided</scope -->
		</dependency>
		<!-- clustering deps -->
		<dependency>
			<groupId>org.jboss.cache</groupId>
			<artifactId>jbosscache-core</artifactId>
			<version>3.2.1.GA</version>
		</dependency>

		<dependency>
			<groupId>org.jboss.cache</groupId>
			<artifactId>jbosscache-pojo</artifactId>
			<version>3.0.0.GA</version>
		</dependency>
		<dependency>
			<groupId>jgroups</groupId>
			<artifactId>jgroups</artifactId>
			<version>2.7.0.GA</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<!-- logging dependency -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
		</dependency>

		<dependency>
			<groupId>com.sun.jdmk</groupId>
			<artifactId>jmxtools</artifactId>
			<version>1.2.1</version>
		</dependency>

		<!--dependency> <groupId>com.sun.jdmk</groupId> <artifactId>jmxtools</artifactId> 
			<version>1.2.1</version> <scope>system</scope> <systemPath>${basedir}/lib/jmxtools-1.2.1.jar 
			</systemPath> <optional>true</optional> </dependency -->

		<dependency>
			<groupId>javax.sip</groupId>
			<artifactId>jain-sip-api</artifactId>
		</dependency>

		<dependency>
			<groupId>javax.sip</groupId>
			<artifactId>jain-sip-ri</artifactId>
		</dependency>
		<!-- licensing dependencies -->
		<dependency>
			<groupId>com.telscale.licensing</groupId>
			<artifactId>lce-core</artifactId>
			<version>${telscale.license.version}</version>
			<!-- <classifier>obfuscated</classifier> -->
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>
								org.mobicents.tools.sip.balancer.BalancerRunner
							</mainClass>
							<addClasspath>true</addClasspath>
						</manifest>
						<manifestEntries>
							<Implementation-Title>
								${manifest.implementation.title}
							</Implementation-Title>
							<Implementation-Version>
								${manifest.implementation.version}
							</Implementation-Version>
							<Implementation-Vendor-Id>
								${manifest.implementation.vendor}
							</Implementation-Vendor-Id>
							<Implementation-URL>
								${manifest.url}
							</Implementation-URL>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>
								org.mobicents.tools.sip.balancer.BalancerRunner
							</mainClass>
						</manifest>
						<manifestEntries>
							<Implementation-Title>
								${manifest.implementation.title}
							</Implementation-Title>
							<Implementation-Version>
								${manifest.implementation.version}
							</Implementation-Version>
							<Implementation-Vendor-Id>
								${manifest.implementation.vendor}
							</Implementation-Vendor-Id>
							<Implementation-URL>
								${manifest.url}
							</Implementation-URL>
						</manifestEntries>
					</archive>
					<descriptors>
						<descriptor>src/main/assembly/src.xml
						</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<!-- this is used for inheritance merges -->
						<phase>package</phase>
						<!-- append to the packaging phase. -->
						<goals>
							<goal>attached</goal><!-- goals == mojos -->
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<compilerArguments>
						<g />
					</compilerArguments>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.8</version>
				<configuration>
					<useProjectReferences>false</useProjectReferences>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.4</version>
				<configuration>
					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=1024m</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>wso2-repository-group</id>
			<name>Wso2 Public Maven Repository Group</name>
			<url>http://dist.wso2.org/maven2</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</repository>
	</repositories>
</project>
